--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 
     <button>Change user</button>
 
-    <script src="main.js">
-    </script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
